<resources>
    <string name="app_name">Safely</string>
    <string name="welcome">Welcome to Safely</string>
    <string name="near">Close to you, wherever you are...</string>
    <string name="try_now">Try Now</string>
    <string name="full_name">Full Name</string>
    <string name="h_name">Hospital Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="signup">Sign Up</string>
    <string name="no_acc">Don\'t have an account?</string>
    <string name="me">I am...</string>
    <string name="patient">Patient</string>
    <string name="doctor">Doctor</string>
    <string name="hospital">Hospital</string>
    <string name="register">Register</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="home">Home</string>
    <string name="location"> Location</string>
    <string name="medical_records">Medical Records</string>
    <string name="profile"> Profile</string>
    <string name="phone_num"> Phone Number</string>
    <string name="dob"> Date of Birth</string>
    <string name="nationality"> Nationality</string>
    <string name="marital_status"> Marital Status</string>
    <string name="sex"> Sex</string>
    <string name="submit"> Submit</string>
    <string-array name="nationalities">
        <item>Lebanese</item>
        <item>English</item>
        <item>French</item>
        <item>American</item>
        <item>Other</item>
    </string-array>
    <string-array name="marital_status">
        <item>Single</item>
        <item>Married</item>
        <item>Engaged</item>
        <item>Divorced</item>
        <item>Widowed</item>
    </string-array>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="hello"> Hello</string>
    <string name="next_appointment">Your upcoming appointment is on</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="time">Time</string>
    <string name="book">Book Appointment</string>
    <string name="info">Personal Info</string>
    <string name="submit_changes">Submit Changes</string>
    <string name="available">Available</string>
    <string name="doctors">Doctors</string>
    <string name="next">Next</string>
    <string name="allergies">Allergies</string>
    <string name="current_medications"> Current Medication</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="blood_type">Blood Type</string>
    <string name="weight">Weight (in KG)</string>
    <string name="height">Height (in cm) </string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="street">Street</string>
    <string name="building">Building</string>
    <string name="specialty">Specialty</string>
    <string name="years_of_experience">Years of Experience</string>
    <string name="hospitals">Hospitals</string>
    <string name="nearby">Nearby</string>
    <string name="choose_workplace">Choose Workplace</string>
    <string name="login_failed">Login Failed</string>
    <string name="invalid_credentials">Invalid Credentials</string>
    <string name="signup_failed">Signup Failed</string>
    <string name="email_in_use">Email Already in use</string>
    <string name="submit_day">Submit Day</string>
    <string-array name="time_per_day">
        <item>08:00–09:00 A.M</item>
        <item>09:00–10:00 A.M</item>
        <item>10:00–11:00 A.M</item>
        <item>11:00–12:00 P.M</item>
        <item>12:00–01:00 P.M</item>
        <item>01:00–02:00 P.M</item>
        <item>02:00–03:00 P.M</item>
        <item>03:00–04:00 P.M</item>
        <item>04:00–05:00 P.M</item>
        <item>05:00–06:00 P.M</item>
    </string-array>
    <string name="choose_day">What day suits you best?</string>
    <string name="choose_time">At what time?</string>
    <string name="confirm_appointment">Confirm Appointment </string>
    <string name="away">km away</string>
    <string name="appointment_summary">Appointment Summary</string>
    <string name="appointment_date">Appointment Date</string>
    <string name="appointment_time">Appointment Time</string>
    <string name="appointment_location">Appointment Location</string>
    <string name="no_appointment">No upcoming Appointments</string>
    <string name="discover">Discover the nearby hospitals</string>
    <string name="available_doctors">Find the available doctors</string>
    <string name="flow">Book an Appointment</string>
    <string name="new_appointment">New Appointment</string>
    <string name="add_availability">Add Availability</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="patient_name">Patient Name</string>
    <string name="upcoming_appointments">Upcoming Appointments</string>
    <string name="go_home">Go Back</string>
    <string name="pick">Pick your available days and times</string>
    <string name="multiple">Select multiple times for each day</string>
    <string-array name="profession">
        <item>Dermatologist</item>
        <item>Cardiologist</item>
        <item>Psychiatrist</item>
        <item>Gynecologist</item>
        <item>Neurologist</item>
        <item>Radiologist</item>
        <item>Anesthesiologist</item>
        <item>Pediatrician</item>
    </string-array>
    <string name="hours">Outpatient Clinic Working Hours</string>
    <string name="general_info">General Info</string>

</resources>