<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home_icon"
        android:title="@string/home"/>
    <item
        android:id="@+id/nav_hospitals"
        android:icon="@drawable/hospital_icon"
        android:title="@string/hospital"/>
    <item
        android:id="@+id/nav_location"
        android:icon="@drawable/location_icon"
        android:title="@string/location"/>
    <item
        android:id="@+id/nav_records"
        android:icon="@drawable/records_icon"
        android:title="@string/medical_records"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/profile"/>


</menu>