<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".patient.ConfirmAppointmentActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/login" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_summary"
        android:fontFamily="@font/laila"
        android:layout_gravity="center_horizontal"
        android:textSize="25sp"
        android:textColor="?attr/custom_black"
        android:layout_marginTop="30dp"/>
    <TextView
        android:id="@+id/appointment_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_date"
        android:layout_marginStart="30dp"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:textColor="?attr/custom_black"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/appointment_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_time"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:textColor="?attr/custom_black"
        android:layout_marginTop="135dp"/>
    <TextView
        android:id="@+id/appointment_doctor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doctor"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:textColor="?attr/custom_black"
        android:layout_marginTop="170dp"/>
    <TextView
        android:id="@+id/appointment_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_location"
        android:fontFamily="@font/inter"
        android:textSize="20sp"
        android:layout_marginStart="30dp"
        android:textColor="?attr/custom_black"
        android:layout_marginTop="205dp"/>

    <Button
        android:id="@+id/confirm_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="#D90BA3D3"
        android:padding="13dp"
        android:fontFamily="@font/inter_extra_bold"
        android:textSize="17sp"
        android:text="@string/confirm_appointment"
        android:textAllCaps="false" />
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="fitEnd"
        android:src="@drawable/confirm" />

</FrameLayout>