<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserInfoActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/userinfo_bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="200dp"
            android:layout_marginEnd="20dp"
            android:text="@string/phone_num"
            android:textColor="@color/blue"
            android:fontFamily="@font/laila"
            />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_num1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="+999-99-999999">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_num"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:fontFamily="@font/laila"
            android:text="@string/dob"
            android:textColor="@color/blue"
             />
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dob1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:hint="DD/MM/YYYY">

            <!--this is the actual edit text which takes the input-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/dob"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="85dp"
            android:text="@string/nationality"
            android:textColor="@color/blue"
            android:fontFamily="@font/laila"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:text="@string/marital_status"
            android:textColor="@color/blue"
            android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="4dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="------" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteTextView2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:inputType="none"
                    android:text="------" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:layout_marginStart="20dp"
            android:text="@string/sex"
            android:textColor="@color/blue"
            android:textStyle="bold" />
        <RadioGroup
            android:id="@+id/radioGroup"
            android:checkedButton="@+id/radio_button_1"
            android:orientation="horizontal"
            android:layout_marginStart="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/radio_button_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:text="@string/male"/>
        <RadioButton
            android:id="@+id/radio_button_2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="32dp"
            android:text="@string/female"/>
        <RadioButton
            android:id="@+id/radio_button_3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/other"/>
        </RadioGroup>


        <Button
            android:id="@+id/signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="20dp"
            android:backgroundTint="#D90BA3D3"
            android:fontFamily="@font/inter"
            android:text="@string/submit"
            android:textAllCaps="false" />

    </LinearLayout>
</FrameLayout>