<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".user.WelcomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitStart"
        android:src="@drawable/welcome_bg" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/oldMan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/oldman" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/oldMan"
            android:fontFamily="@font/inter"
            android:gravity="center"
            android:shadowColor="@color/text_shadow"
            android:shadowDx="-2"
            android:shadowDy="-2"
            android:shadowRadius="1"
            android:text="@string/welcome"
            android:textColor="@color/black"
            android:textSize="34sp" />

        <TextView
            android:id="@+id/near"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:fontFamily="@font/manrope"
            android:gravity="center"
            android:text="@string/near"
            android:textColor="@color/black"
            android:textSize="18sp"

            />

        <Button
            android:id="@+id/trynow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/near"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/blue_rounded_corners"
            android:fontFamily="@font/inter"
            android:text="@string/try_now"
            android:textAllCaps="false" />
    </RelativeLayout>
</FrameLayout>