<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hospital.HospitalInfoActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="220dp"
                android:scaleType="fitStart"
                android:src="@drawable/care" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="0dp"
                android:fontFamily="@font/laila"
                android:text="@string/general_info"
                android:textColor="@color/blue"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/laila"
                android:text="@string/phone_num"
                android:textColor="@color/blue" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phone_num1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/laila"
                android:text="@string/hours"
                android:textColor="@color/blue" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/hours1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/hours"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:fontFamily="@font/laila"
                android:text="@string/address"
                android:textColor="@color/blue"
                android:textSize="22sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/laila"
                android:text="@string/country"
                android:textColor="@color/blue" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/country1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/laila"
                android:text="@string/city"
                android:textColor="@color/blue" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/laila"
                android:text="@string/street"
                android:textColor="@color/blue" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/street1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/street"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="32dp"
                android:fontFamily="@font/laila"
                android:text="@string/building"
                android:textColor="@color/blue" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/building1"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp">

                <!--this is the actual edit text which takes the input-->
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/building"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/submit_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="32dp"
                android:backgroundTint="#D90BA3D3"
                android:fontFamily="@font/inter_extra_bold"
                android:padding="13dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textSize="17sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>